antsurance/force-app/main/default/objects/Policy_Asset__c/Policy_Asset__c.object-meta.xml
<CustomObject>
    <description>Something a policy insures: a vehicle with its VIN, a home or commercial building with its address and construction, a fleet or a business operation. A policy can insure several.</description>
    <label>Insured Asset</label>
    <nameField>
        <label>Asset</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Insured Assets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>