antsurance/force-app/main/default/objects/Policy_Asset__c/fields/Asset_Type__c.field-meta.xml
<CustomField>
    <fullName>Asset_Type__c</fullName>
    <description>What kind of thing is insured.</description>
    <label>Asset Type</label>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vehicle</fullName>
            </value>
            <value>
                <fullName>Dwelling</fullName>
            </value>
            <value>
                <fullName>Rented Residence</fullName>
            </value>
            <value>
                <fullName>Commercial Building</fullName>
            </value>
            <value>
                <fullName>Business Property</fullName>
            </value>
            <value>
                <fullName>Fleet</fullName>
            </value>
            <value>
                <fullName>Workplace</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <type>Picklist</type>
</CustomField>