antsurance/force-app/main/default/objects/Policy_Asset__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <description>Rating details such as construction, square footage, roof age, annual mileage or safety features.</description>
    <label>Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>