antsurance/force-app/main/default/objects/Policy_Asset__c/fields/Identifier__c.field-meta.xml
<CustomField>
    <fullName>Identifier__c</fullName>
    <description>The VIN for a vehicle, or a location or schedule number for property.</description>
    <label>Reference</label>
    <length>40</length>
    <type>Text</type>
</CustomField>