antsurance/force-app/main/default/objects/Policy_Asset__c/fields/Insured_Value__c.field-meta.xml
<CustomField>
    <fullName>Insured_Value__c</fullName>
    <description>The value the asset is insured for.</description>
    <label>Value</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>