antsurance/force-app/main/default/objects/Policy_Asset__c/fields/Latitude__c.field-meta.xml
<CustomField>
    <fullName>Latitude__c</fullName>
    <description>Where the asset is, north or south, so it can be shown on a map without looking the address up.</description>
    <label>Latitude</label>
    <precision>9</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>