antsurance/force-app/main/default/objects/Policy_Asset__c/fields/Lienholder__c.field-meta.xml
<CustomField>
    <fullName>Lienholder__c</fullName>
    <description>The lender with an interest in the asset, if any.</description>
    <label>Lienholder or Mortgagee</label>
    <length>120</length>
    <type>Text</type>
</CustomField>