antsurance/force-app/main/default/objects/Policy_Asset__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>Where the vehicle is kept or where the property is.</description>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>