antsurance/force-app/main/default/objects/Policy_Asset__c/fields/Longitude__c.field-meta.xml
<CustomField>
    <fullName>Longitude__c</fullName>
    <description>Where the asset is, east or west, so it can be shown on a map without looking the address up.</description>
    <label>Longitude</label>
    <precision>9</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>