antsurance/force-app/main/default/objects/Policy_Asset__c/fields/Model_Year__c.field-meta.xml
<CustomField>
    <fullName>Model_Year__c</fullName>
    <description>Model year of a vehicle, or year built for a building.</description>
    <label>Model Year or Year Built</label>
    <length>4</length>
    <type>Text</type>
</CustomField>