antsurance/force-app/main/default/objects/Policy_Asset__c/fields/Policy__c.field-meta.xml
<CustomField>
    <fullName>Policy__c</fullName>
    <description>The policy that insures this asset.</description>
    <label>Policy</label>
    <referenceTo>Policy__c</referenceTo>
    <relationshipLabel>What Is Insured</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>