antsurance/force-app/main/default/objects/Policy_Asset__c/fields/Use__c.field-meta.xml
<CustomField>
    <fullName>Use__c</fullName>
    <description>How it is used: commute, pleasure, primary residence, owner occupied and so on.</description>
    <label>Use</label>
    <length>80</length>
    <type>Text</type>
</CustomField>